# pytket-quantinuum

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.md  _metadata.py  flake.nix  mypy-check  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  setup.py  test.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: all-checks.yml  build-test  build_and_test.yml  check-examples.yml  docs.yml  fetch-modules  hotfix.yml  issue.yml  lint.yml  release.yml
.github/workflows/docs/: build-docs  check-build-docs  conf.py  intro.txt  requirements.txt
docs/: README.md  api.md  api.rst  build-docs.sh  changelog.md  changelog.rst  index.html  index.md  index.rst  install.sh  intro.txt
docs/_static/: custom.css
docs/api/: .buildinfo  api.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/.doctrees/: api.doctree  changelog.doctree  index.doctree
docs/api/_sources/: changelog.rst.txt  index.rst.txt
docs/api/_static/: documentation_options.js
docs/api/quantinuum/: api.html  changelog.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docs/api/quantinuum/.doctrees/: api.doctree  changelog.doctree  index.doctree
docs/api/quantinuum/_sources/: index.rst.txt
docs/api/quantinuum/_static/: documentation_options.js
examples/: Quantinuum Circuit Submissions via pytket.ipynb  Quantinuum_advanced_compilation.ipynb  Quantinuum_arbitrary_angle_zz.ipynb  Quantinuum_arbitrary_zz.ipynb  Quantinuum_batch_submissions.ipynb  Quantinuum_chemistry_chemically_aware_ucc.ipynb  Quantinuum_circuit_compilation.ipynb  Quantinuum_circuit_stitching.ipynb  Quantinuum_circuit_submissions.ipynb  Quantinuum_compile_without_api.ipynb  Quantinuum_conditional_execution_h_series.ipynb  Quantinuum_conditional_gates.ipynb  Quantinuum_emulator-original-gen.ipynb  Quantinuum_emulator.ipynb  Quantinuum_emulators.ipynb  Quantinuum_high_energy_physics_experiment.ipynb  Quantinuum_hseries_emulators.ipynb  Quantinuum_leakage_detection.ipynb  Quantinuum_mid-circuit_measurement.ipynb  Quantinuum_mid_circuit_measurement.ipynb  Quantinuum_n56_ghz_state_fidelity.ipynb  Quantinuum_native_gate_compilation.ipynb  Quantinuum_parametrized_gates.ipynb  Quantinuum_qiskit_with_h_series.ipynb  Quantinuum_save_load_handles.ipynb  Quantinuum_signing_in.ipynb  Quantinuum_toric_code.ipynb  Quantinuum_variational_experiment_with_batching.ipynb  Quantinuum_variational_experiment_with_batching.py  README.md  answer_input_prompts  check-examples  ci-excluded-notebooks.txt  gen-nb  logo_header_markdown.md  maintained-notebooks.txt  quantinuum_variational_experiment.ipynb  requirements.txt  wasm_in_pytket.ipynb
examples/data/: hamiltonian_ch4_6qb.json
examples/hybrid-compute/: Quantinuum_hseries_hybrid_compute.ipynb  README.md  RUS_experiments.json  RUS_limit=5_cond=3.json  bacthed_wasm_example.ipynb  batched_wasm_example.ipynb  batched_wasm_example.py
examples/hybrid-compute/repeat_until_success/: Cargo.toml  RUS_example_with_wasm.py  RUS_experiments.json  RUS_limit=5_cond=3.json  Repeat_until_success_with_wasm.ipynb  Repeat_until_success_with_wasm.py  batched_RUS_example.ipynb  circuit_dict.json
examples/hybrid-compute/repeat_until_success/src/: main.rs
examples/hybrid-compute/repetition_code/c/: rc.wasm
examples/hybrid-compute/repetition_code/rust/: Cargo.toml  rc.wasm
examples/hybrid_compute/: Quantinuum Hybrid Compute via pytket.ipynb  README.md
examples/hybrid_compute/repeat_until_success/: rus_wasm.wasm
examples/hybrid_compute/repeat_until_success/rus_wasm/: Cargo.toml
examples/hybrid_compute/repeat_until_success/rus_wasm/src/: lib.rs
examples/python/: Quantinuum_arbitrary_angle_zz.py  Quantinuum_arbitrary_zz.py  Quantinuum_batch_submissions.py  Quantinuum_chemistry_chemically_aware_ucc.py  Quantinuum_circuit_compilation.py  Quantinuum_circuit_submissions.py  Quantinuum_compile_without_api.py  Quantinuum_compile_without_api.pyx  Quantinuum_conditional_execution_h_series.py  Quantinuum_conditional_gates.py  Quantinuum_emulator.py  Quantinuum_emulators.py  Quantinuum_high_energy_physics_experiment.py  Quantinuum_leakage_detection.py  Quantinuum_mid-circuit_measurement.py  Quantinuum_mid_circuit_measurement.py  Quantinuum_parametrized_gates.py  Quantinuum_qiskit_with_h_series.py  Quantinuum_signing_in.py  Quantinuum_toric_code.py  Quantinuum_variational_experiment.py  Quantinuum_variational_experiment_with_batching.py  wasm_in_pytket.py
examples/qec_decoder_toolkit/: Quantinuum_hseries_qec_decoder_toolkit.ipynb
examples/qec_decoder_toolkit/repeat_until_success/: README.md
examples/qec_decoder_toolkit/repeat_until_success/c/tests/: CMakeLists.txt  test_lib.cc
examples/qec_decoder_toolkit/repeat_until_success/rust/: Cargo.toml
examples/qec_decoder_toolkit/repetition_code/: README.md
examples/qec_decoder_toolkit/repetition_code/c/: rc.wasm
examples/qec_decoder_toolkit/repetition_code/rust/: rc.wasm
examples/qec_decoder_toolkit/surface_code/: README.md
examples/qec_decoder_toolkit/surface_code/c/: surface_code.wasm
nix-support/: pytket-quantinuum.nix
pytket/extensions/quantinuum/: __init__.py  _metadata.py
tests/: api1_test.py  api_test.py  backend_test.py  conftest.py  convert_test.py  leakage_detection_test.py  sample_wasm.wasm  test-requirements.txt
tests/integration/: backend_test.py  local_emulator1_test.py  local_emulator_multithreading_test.py  local_emulator_test.py
tests/integration/qir/: hugr-qir-test.ll  qat-link.ll  qat-link_2.ll  test_pytket_qir_6.ll  test_pytket_qir_wasm_5-QIRProfile.ADAPTIVE.ll  test_pytket_qir_wasm_5-QIRProfile.PYTKET.ll  test_pytket_qir_wasm_6-QIRProfile.ADAPTIVE.ll  test_pytket_qir_wasm_6-QIRProfile.PYTKET.ll
tests/unit/: add1.c  api1_test.py  api_test.py  backend.py  convert_test.py  data_test.py  leakage_detection_test.py  offline_backend_test.py
tests/wasm/: README.md  add1.c  add1.wasm  add1.wast  collatz.c  collatz.wasm  collatz.wast  multivalue.wast  state.c  state.wasm  state.wast
(+23 files in other folders)
