[project]
name = "pytket-quantinuum"
dynamic = ["version"]
requires-python = ">=3.10,<4.0"

description = "Extension for pytket, providing access to Quantinuum backends"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" }
]
maintainers = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pytket >= 2.11.0",
    "pytket-qir >= 0.25.0",
    "numpy >= 1.26.4",
]

[project.optional-dependencies]
pecos = ["pytket-pecos ~= 0.2.2", "quantum-pecos == 0.7.0.dev4"]


[project.urls]
documentation = "https://tket.quantinuum.com/extensions/pytket-quantinuum/index.html"
source = "https://github.com/Quantinuum/pytket-quantinuum"
tracker = "https://github.com/Quantinuum/pytket-quantinuum/issues"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "_metadata.__extension_version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest >=8.3.2,<9",
    "pytest-timeout ~=2.4.0",
    "ruff >=0.6.2,<0.7",
    "mypy >=1.11.1,<2",
    "hypothesis >=6.111.1,<7",
    "pre-commit >=3.8.0,<4",
    "pyupgrade >=2.29,<4.0",
    "TODOPYTKETEXT",
]
